# central-bank-swaps

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  playwright-mcp-config.json  playwright-mcp-init.js  pyproject.toml
config/: banks.yaml  banks_test.yaml  banks_test_3.yaml
data/: ecb_review.xlsx  fed_events_review.xlsx  pboc_review.xlsx
docs/: ORIGINAL_README.md
src/cbs/: scheduler.py
src/cbs/config/: banks.py  tracing.py
src/cbs/db/: press_release_repo.py  run_manager.py  schema.py  swap_repo.py
src/cbs/llm/: __init__.py  claude_code_model.py  provider.py
src/cbs/pipeline/: __init__.py  __main__.py  backfill.py  bank_processor.py  classifier.py  extractor.py  incremental.py  models.py  orchestrator.py  protocols.py  translator.py  worker_factory.py
src/cbs/scraper/: __init__.py  browser.py  html_extractor.py  instance_pool.py  models.py  navigator.py  pdf_extractor.py
tests/: conftest.py
tests/benchmarks/: harness.py  test_classification_accuracy.py
tests/integration/: test_browser_integration.py  test_navigator_integration.py
tests/unit/: test_backfill.py  test_bank_config.py  test_bank_processor.py  test_benchmark_harness.py  test_browser.py  test_classifier.py  test_claude_code_model.py  test_cli.py  test_extractor.py  test_html_extractor.py  test_incremental.py  test_instance_pool.py  test_llm_provider.py  test_navigator.py  test_orchestrator.py  test_pdf_extractor.py  test_press_release_repo.py  test_run_manager.py  test_scheduler.py  test_schema.py  test_swap_repo.py  test_tracing.py  test_translator.py  test_worker_factory.py
(+7 files in other folders)
